# soulhub

./: .env.example  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  ecosystem.config.cjs  package-lock.json  package.json  server.js  settings.example.json  svelte.config.js  tsconfig.json  vite.config.ts
.githooks/: pre-push
catalog/: brand-index.json  catalog-index.json  document-index.json
cli/: package.json  soul  tsconfig.json
install/: README.md  claude-settings.snippet.json
pipelines/_builder/project-templates/py-package/: .gitignore  pyproject.toml
pipelines/_builder/project-templates/py-package/src/mypackage/: __init__.py
pipelines/_builder/project-templates/py-package/tests/: test_main.py
playbooks/: CLAUDE.md  CONTRACTS.md
scripts/: backfill-adr-lifecycle-dates.py  backfill-falsifier-dates.py  backfill-inbox-extract.ts  backfill-inbox-message-id.mjs  backfill-vault-titles.ts  backfill-zone-indexes.ts  bootstrap.ps1  bootstrap.sh  build-worker.mjs  claude-config-backup-daily.sh  doctor-secrets.sh  doctor.mjs  install-chokepoint.sh  install-tiktok-deps.sh  migrate-ai-ag-risks.sh  migrate-brain.py  migrate-claude-config-collapse.sh  migrate-pipeline-schedules.ts  peer-brief-naseej.sh  peer-brief-parity-3way.py  peer-brief-rebuild.sh  peer-brief-render.py  redeploy.mjs  release-export.sh  release-publish.py  smoke-deepseek-v4-flash.ts  smoke-history-fallback.ts  smoke-inbox-anomaly.ts  smoke-inbox-auto-route.ts  smoke-inbox-digest.ts  smoke-inbox-drill-down.ts  smoke-inbox-eager-extract.ts  (+20 more)
(+1145 files in other folders)
